@@ -157,37 +157,49 @@
  *     - username: (string) Username to use for SMTP server authentication (if
  *                 empty, uses IMP authentication username).
  *
- * spam: (array) Spam reporting configuration. This array can contains two
+ * spam: (array) Spam reporting configuration. This array can contain two
  *   keys - 'innocent' and 'spam' - that defines the behavior when a user
  *   flags a message with one of these actions.
  *
- *   To activate reporting, define either an 'email' or 'program' option (or
- *   both) for an action. These placeholders are available in these options
+ *   The 'display' option (boolean) behaves as follows:
+ *     - innocent: If true, the innocent action only appears in the user's
+ *                 spam mailbox (default). If false, the action appears in
+ *                 all mailboxes.
+ *     - spam: If false, the spam action appears in all mailboxes other than
+ *             the user's spam mailbox (default). If true, the action appears
+ *             in all mailboxes.
+ *
+ *   These placeholders are available in the options marked *EXPANDABLE* below
  *   and will be expanded at run-time:
  *      - %u: The Horde username.
  *      - %l: The short username (no domain information).
  *      - %d: The domain name.
  *
- *   These options are available for each action:
- *     - display: (boolean) This option depends on the action.
- *       - innocent: If true, the innocent action only appears in the user's
- *                   spam mailbox (default). If false, the action appears in
- *                   all mailboxes.
- *       - spam: If false, the spam action appears in all mailboxes other than
- *               the user's spam mailbox (default). If true, the action appears
- *               in all mailboxes.
- *     - email: (string) The e-mail address to use for reporting.
- *     - email_format: (string) Either 'digest' or 'redirect'.
- *       - digest: [DEFAULT; RECOMMENDED] Packages the raw data of all
- *                 messages reported by the user in their marking action and
- *                 sends to the reporting e-mail address ('email' option) in a
- *                 single multipart/digest message.
- *       - redirect: Redirects the message to the reporting e-mail address
- *                   ('email' option). Note that this alters the original
- *                   message's headers and may break embedded spam reporting
- *                   signature information contained in the original message.
- *     - program: (string) An external program to report the spam message to.
- *                Messages will be reported to the program via standard input.
+ *   The following drivers are available (at least one driver must be
+ *   configured for the spam options to appear in the UI):
+ *
+ *     + Email reporting
+ *       - email: (string) The e-mail address to use for reporting.
+ *       - email_format: (string) Either 'digest' or 'redirect'.
+ *         - digest: [DEFAULT; RECOMMENDED] Packages the raw data of all
+ *                   messages reported by the user in their marking action and
+ *                   sends to the reporting e-mail address in a single
+ *                   multipart/digest message.
+ *         - redirect: Redirects the message to the reporting e-mail address
+ *                     Note that this alters the original message's headers
+ *                     and may break embedded spam reporting signature
+ *                     information contained in the original message.
+ *
+ *     + Null reporting
+ *       - null: (boolean) Whether the action should be considered to be
+ *               successful or not. This driver can be used to trigger
+ *               post-reporting spam actions (i.e. deleting/moving messages)
+ *               if this value is true and no other drivers are configured.
+ *
+ *     + Program reporting
+ *       - program: (string) An external program to report the spam message
+ *                  to. Messages will be reported to the program via standard
+ *                  input.
  *
  *
  * Properties that only apply to IMAP servers:
@@ -370,14 +382,28 @@ $servers['advanced'] = array(
     'spam' => array(
         // 'innocent' => array(
         //     'display' => true,
+        //
+        //     // Email reporting driver
         //     'email' => null,
         //     'email_format' => 'digest',
+        //
+        //     // Null reporting driver
+        //     'null' => true,
+        //
+        //     // Program reporting driver
         //     'program' => null
         // ),
         // 'spam' => array(
         //     'display' => false,
+        //
+        //     // Email reporting driver
         //     'email' => null,
         //     'email_format' => 'digest',
+        //
+        //     // Null reporting driver
+        //     'null' => true,
+        //
+        //     // Program reporting driver
         //     'program' => null
         // ),
         // // It is possible to directly define additional spam drivers.
